--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+weights/7/inceptionv3/inceptionv3.pb filter=lfs diff=lfs merge=lfs -text
+weights/7/mobilenet/mobilenetv2.pb filter=lfs diff=lfs merge=lfs -text
+weights/7/resnet/resnet152.pb filter=lfs diff=lfs merge=lfs -text
+*.pb filter=lfs diff=lfs merge=lfs -text
